--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<title>Home</title>
 		<link rel="stylesheet" type="text/css" href="../assets/CSS/normalize.css">
-		<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+		<link rel="stylesheet" type="text/css" href="../assets/CSS/style.css">
 	</head>
 	<body>
 		<header>
