Media Query para desktop configurado. Barra e navegação sendo exibida para tablets com orientation portrait.

--- a/src/index.html
+++ b/src/index.html
@@ -10,24 +10,19 @@
 	<body>
 		<header>
 			<div id="header" class="absolute">
-				<img id="logo" class=" " src="../assets/IMG/logo.png">
+				<img id="logo" class="absolute" src="../assets/IMG/logo.png">
 				<h2>Controle financeiro</h2>
 				
 
-				<input type="checkbox" id="check">
-					<label class=" " for="check">
+			
 						<button id="menu" class=" ">
 							<img src="../assets/IMG/hamburguer.png">
 						</button>
-					</label>
 
 				<nav class="nav">
-					<input type="checkbox" id="checkbox2">
-					<label for="checkbox2">
 						<button id="menu-close">
 							<img src="../assets/IMG/x-vector.svg">
 						</button>
-					</label>
 					<ul>
 						<li><a href="">Cadastro de transações</a></li>
 						<li><a  href="">Limpar Dados</a></li>
