--- a/src/index.html
+++ b/src/index.html
@@ -4,111 +4,110 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8">
 		<title>Home</title>
-		<link rel="stylesheet" type="text/css" href="../assets/CSS/normalize.css">
-		<link rel="stylesheet" type="text/css" href="../assets/CSS/style.css">
+		<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 	</head>
 	<body>
-		<header>
-			<div id="header" class="absolute">
-				<img id="logo" class="absolute" src="../assets/IMG/logo.png">
-				<h2>Controle financeiro</h2>
+		<div id="header">
+			<header>
+					<img class="logo" src="../assets/img/logo.png" alt="logo">
+					<h2>Controle financeiro</h2>
 				
+					<img class ="hamburguer" src="../assets/img/hamburguer.png" alt="abrir menu">
 
+					<nav>
+						<div class="div-img">
+							<img src="../assets/img/x-vector.svg" alt ="fechar menu">
+						</div>
+						<div class="div-button">
+							<button>Cadastro de transações</button>
+							<button>Limpar Dados</button>
+						</div>
+					</nav>
+			</header>
+		<div>
 			
-						<button id="menu" class=" ">
-							<img src="../assets/IMG/hamburguer.png">
-						</button>
+		<div id="content">
+				<section id="form">
+					<div class="h2-form">
+						<h2>Nova transação</h2>
+					</div>
+					<form>
+						<div class="wrapper">
+							<div class="first-input">
+								<label for="transaction-type">Tipo de transação</label>
+								<select id="transaction-type">
+									<option value="compra">Compra</option>
+									<option value="venda">Venda</option>
+								</select>
+							</div>
 
-				<nav class="nav">
-						<button id="menu-close">
-							<img src="../assets/IMG/x-vector.svg">
-						</button>
-					<ul>
-						<li><a href="">Cadastro de transações</a></li>
-						<li><a  href="">Limpar Dados</a></li>
-					</ul>
-				</nav>
-			</div>
-		</header>
+							<div class="second-input">
+								<label for="merch-name">Nome da mercadoria</label>
+								<input type="text" id="merch-name" placeholder="input">
+							</div>
 
-			<section id="form" class="absolute">
-				<div class="form-title">
-					<h2>Nova transação</h2>
-				</div>
-				<form>
-					<div class="absolute dropdown">
-						<label for="transaction-type" class="absolute">Tipo de transação</label>
-						<select id="transaction-type" class="absolute">
-							<option value="compra">Compra</option>
-							<option value="venda">Venda</option>
-						</select>
+							<div class="third-input">
+								<label for="value">Valor</label>
+								<input type="value" id="value" placeholder="R$ 0,00">
+							</div>
+						</div>
+
+						<div class="button-form">
+							<button>Adicionar transação</button>
+						</div>
+					</form>
+					<div class="form-line"></div>
+				</section>
+
+				<section id="table">
+					<div>
+						<h2>Extrato de transações</h2>
 					</div>
 
-					<div class="absolute input-medium name-div">
-						<label class="absolute"for="merch-name">Nome da mercadoria</label>
-						<input class="absolute" type="text" id="merch-name" placeholder="input">
-					</div>
-
-					<div class="absolute input-medium value-div">
-						<label class="absolute" for="value">Valor</label>
-						<input class="absolute" type="value" id="value" placeholder="R$ 0,00">
-					</div>
-
-					<div class="absolute button-div">
-						<button>Adicionar transação</button>
-					</div>
-				</form>
-			</section>
-
-			<section id="ac-statement" class="absolute">
-				<h2 class="absolute">Extrato de transações</h2>
-
-				<div id="frame" class="absolute">
-					<table>
-						<thead>
-							<tr>
-								<th class="absolute thead-1">Mercadoria</th>
-
-								<th class="absolute thead-2">Valor</th>
-							</tr>
-							<div class="absolute vl"></div>
+					<div>
+						<table>
+							<thead>
+								<tr>
+									<th colspan="1.5"></th>
+									<th colspan="1.5">Mercadoria</th>
+									<th colspan="1.5">Valor</th>
+								</tr>
+							</thead>
 
 							<tbody>
-								<tr class="l1">
-									<td class="absolute" colspan="0.3">+</td>
-									<td class="absolute">Lorem ipsum dolor sit amet<br> constecteur</td>
-									<td class="absolute">R$ 12,999,99</td>
+								<tr>
+									<td colspan="0.3">+</td>
+									<td>Lorem ipsum dolor sit amet<br>constecteur</td>
+									<td>R$ 12.999,99</td>
 								</tr>
-								<div class="absolute vl"></div>
-								<tr class="l2">
-									<td class="absolute" colspan="0.3">-</td>
-									<td class="absolute">Quis nostrud exercitation</td>
-									<td class="absolute">R$99,99</td>
+								<tr>
+									<td colspan="0.3">-</td>
+									<td>Quis nostrud exercitation</td>
+									<td>R$ 99,99</td>
 								</tr>
-								<div class="absolute vl"></div>
-								<tr class="l3">
-									<td class="absolute" colspan="0.3">+</td>
-									<td class="absolute">Lorem ipsum</td>
-									<td class="absolute">R4 99,99</td>
+								<tr>
+									<td colspan="0.3">+</td>
+									<td>Lorem ipsum</td>
+									<td>R$ 99,99</td>
 								</tr>
-								<div class="absolute vl"></div>
 							</tbody>
 
 							<tfoot>
-								<tr class="l4">
-									<td class="absolute">Total</td>
-									<td class="absolute">R$ 12.909,99</td>
-									<td class="absolute">(LUCRO)</td>
+								<tr>
+									<td></td>
+									<td>Total</td>
+									<td>R$ 12.909,99 <br> (LUCRO)</td>
 								</tr>
 							</tfoot>
 						</thead>
 					</table>
 				</div>
 			</section>
+		</div>
 
-			<footer class="absolute">
-				<div class="f-line  absolute"></div>
-			</footer>
+		<footer>
+			<div></div>
+		</footer>
 
 	</body>
 </html>
