--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8">
 		<title>Home</title>
-		<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+		<link rel="stylesheet" type="text/css" href="../assets/CSS/style.css">
 	</head>
 	<body>
 		<div id="header">
 			<header>
-					<img class="logo" src="../assets/img/logo.png" alt="logo">
+					<img class="logo" src="../assets/IMG/logo.png" alt="logo">
 					<h2>Controle financeiro</h2>
 				
-					<img class ="hamburguer" src="../assets/img/hamburguer.png" alt="abrir menu">
+					<img class ="hamburguer" src="../assets/IMG/hamburguer.png" alt="abrir menu">
 
 					<nav>
 						<div class="div-img">
-							<img src="../assets/img/x-vector.svg" alt ="fechar menu">
+							<img src="../assets/IMG/x-vector.svg" alt ="fechar menu">
 						</div>
 						<div class="div-button">
 							<button>Cadastro de transações</button>
