Adicionando comentários descritivos ao index.html

--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8">
 		<title>Home</title>
+		<!-- Arquivo CSS -->
 		<link rel="stylesheet" type="text/css" href="../assets/CSS/style.css">
 	</head>
 	<body>
+		<!--Iníco da div de cabeçalho -->
 		<div id="header">
 			<header>
 				<img class="logo" src="../assets/img/logo.png" alt="logo">
 				<h2>Controle financeiro</h2>
 				<img class ="hamburguer" src="../assets/img/hamburguer.png" alt="abrir menu">
+				<!--Início da barra de navegação -->
 				<nav>
 					<div class="div-img">
 						<img src="../assets/img/x-vector.svg" alt ="fechar menu">
@@ -21,14 +24,18 @@
 						<button>Limpar Dados</button>
 					</div>
 				</nav>
+				<!--Fim da barra de navegação -->
 			</header>
 		<div>
-			
+		<!--Fim da div de cabeçalho -->
+
+		<!-- Início da div de conteúdos (formulário e tabela) -->
 		<div id="content">
 			<section id="form">
 				<div class="h2-form">
 					<h2>Nova transação</h2>
 				</div>
+				<!-- Início do formulário -->
 				<form>
 					<div class="wrapper">
 						<div class="first-input">
@@ -54,6 +61,8 @@
 						<button type="submit">Adicionar transação</button>
 					</div>
 				</form>
+				<!-- Fim do formulário -->
+
 				<div class="form-line"></div>
 			</section>
 
@@ -63,6 +72,7 @@
 				</div>
 
 				<div>
+					<!--início da tabela -->
 					<table class="lista">
 						<thead>
 							<tr>
@@ -98,14 +108,16 @@
 							</tr>
 						</tfoot>
 					</table>
+					<!--Fim da tabela -->
 				</div>
 			</section>
 		</div>
+		<!-- Fim da div de conteúdos-->
 
+		<!-- Início do rodapé -->
 		<footer>
 			<div></div>
 		</footer>
-
-		
+		<!-- Fim do rodapé -->
 	</body>
 </html>
