--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
 			<header>
 				<img class="logo" src="../assets/img/logo.png" alt="logo">
 				<h2>Controle financeiro</h2>
-				<img class ="hamburguer" src="../assets/img/hamburguer.png" alt="abrir menu">
+				<label for="nav-selector"><img class ="hamburguer" src="../assets/img/hamburguer.png" alt="abrir menu"></label>
+				<input type="checkbox" name="nav-selector">
 				<!--Início da barra de navegação -->
 				<nav>
 					<div class="div-img">
