Configuração da barra de navegação à partir do botão hamburguer finalizada.

--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,16 @@
 			<header>
 				<img class="logo" src="../assets/img/logo.png" alt="logo">
 				<h2>Controle financeiro</h2>
-				<label for="nav-selector"><img class ="hamburguer" src="../assets/img/hamburguer.png" alt="abrir menu"></label>
-				<input type="checkbox" name="nav-selector">
+				<label for="nav-selector">
+						<img class ="hamburguer" src="../assets/img/hamburguer.png" alt="abrir menu">
+				</label>
+				<input type="checkbox" id="nav-selector">
 				<!--Início da barra de navegação -->
-				<nav>
+				<nav class="nav-resp">
 					<div class="div-img">
-						<img src="../assets/img/x-vector.svg" alt ="fechar menu">
+						<label for="nav-selector">
+							<img src="../assets/img/x-vector.svg" alt ="fechar menu">
+						</label>
 					</div>
 					<div class="div-button">
 						<button>Cadastro de transações</button>
