Correção de bug github pages.

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
 		<!--Iníco da div de cabeçalho -->
 		<div id="header">
 			<header>
-				<img class="logo" src="../assets/img/logo.png" alt="logo">
+				<img class="logo" src="../assets/IMG/logo.png" alt="logo">
 				<h2>Controle financeiro</h2>
 				<label for="nav-selector">
-						<img class ="hamburguer" src="../assets/img/hamburguer.png" alt="abrir menu">
+						<img class ="hamburguer" src="../assets/IMG/hamburguer.png" alt="abrir menu">
 				</label>
 				<input type="checkbox" id="nav-selector">
 				<!--Início da barra de navegação -->
