Correção de bugs github pages 2.

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 				<nav class="nav-resp">
 					<div class="div-img">
 						<label for="nav-selector">
-							<img src="../assets/img/x-vector.svg" alt ="fechar menu">
+							<img src="../assets/IMG/x-vector.svg" alt ="fechar menu">
 						</label>
 					</div>
 					<div class="div-button">
