--- a/src/index.html
+++ b/src/index.html
@@ -88,21 +88,7 @@
 						</thead>
 
 						<tbody>
-							<tr>
-								<td colspan="0.3">+</td>
-								<td>Lorem ipsum dolor sit amet<br>constecteur</td>
-								<td>R$ 12.999,99</td>
-							</tr>
-							<tr>
-								<td colspan="0.3">-</td>
-								<td>Quis nostrud exercitation</td>
-								<td>R$ 99,99</td>
-							</tr>
-							<tr>
-								<td colspan="0.3">+</td>
-								<td>Lorem ipsum</td>
-								<td>R$ 99,99</td>
-							</tr>
+							
 						</tbody>
 							
 						<tfoot>
@@ -124,5 +110,8 @@
 			<div></div>
 		</footer>
 		<!-- Fim do rodapé -->
+
+		<!-- Script JS -->
+		<script type="text/javascript" src="../assets/js/script.js"></script>
 	</body>
 </html>
