Adicionada máscara para aceitar apenas caracteres específicas no campo valor.

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
 
 						<div class="third-input">
 							<label for="value">Valor</label>
-							<input type="text" id="value" placeholder="R$ 0,00" required>
+							<input type="text" id="value" onkeypress="mask(event)" placeholder="R$ 0,00" required>
 						</div>
 					</div>
 
