Correção de bug na verificação do valor e adição de função para atualizar o valor total na tabela.

--- a/src/index.html
+++ b/src/index.html
@@ -92,10 +92,10 @@
 						</tbody>
 							
 						<tfoot>
-							<tr>
+							<tr class="total">
 								<td></td>
 								<td>Total</td>
-								<td> <br> </td>
+								<td class="value"> <br> </td>
 							</tr>
 						</tfoot>
 					</table>
