--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,8 @@
 						</label>
 					</div>
 					<div class="div-button">
-						<button>Cadastro de transações</button>
-						<button>Limpar Dados</button>
+						<button onclick="transactionLog()">Cadastro de transações</button>
+						<button onclick="cleanData()">Limpar Dados</button>
 					</div>
 				</nav>
 				<!--Fim da barra de navegação -->
